Updated 404 and 500 to bootstrap 2.0

--- a/src/e_cidadania/templates/404.html
+++ b/src/e_cidadania/templates/404.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="span-one-third offset-one-third">
+        <div class="span4 offset4">
             <h1>{% trans "Nooo...!" %}</h1><br />
             <h1 style="font-size:12em;text-align:center;">404</h1><br /><br />
             <h6 style="text-align:center;">{% trans "The page you're looking for does not exist." %}</h6>
