Adapted the base template to bootstrap 2.0

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -4,29 +4,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
 		<title>{% block title %}{% endblock %}</title>
+		<!-- Load CSS -->
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/ui.notify.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/smoothness/jquery-ui-1.8.13.custom.css" media="screen" />
 		<link rel="stylesheet" type="text/css" media="screen" href="{{ STATIC_URL }}/css/screen.css"/>
+		<!-- End load CSS -->
 		<link rel="shortcut icon" href="{{ STATIC_URL }}/assets/favicon.ico" type="image/ico"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="e-cidadania es una plataforma de democracia participativa"/>
 		<meta name="Robots" content="all"/>
+		<!-- Load JavaScript -->
 		<script src="http://www.google.com/jsapi?key=ABQIAAAATqrYeRgzMa92HeAJ337iJhRWlTAuTwYT79cviOHriikXgTyaXRSApoqdJPf4dwJKYRnFn_s4iABNkg" type="text/javascript"></script>
 		<script type="text/javascript">
 			google.load("jquery", "1.7.1", {uncompressed:false});
 			google.load("jqueryui", "1.8.16", {uncompressed:false});
 		</script>
         <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
-        <script src="{{ STATIC_URL }}/js/bootstrap-dropdown.js" type="text/javascript"></script>
-       	<script src="{{ STATIC_URL }}/js/bootstrap-alerts.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
     	<script type="text/javascript">
     	    $(document).ready(function(){
-                $(".alert-message").alert();
+                $(".alert").alert();
             });
     	</script>
+    	<!-- End load JavaScript -->
        	{% block extrajs %}
        	{% endblock %}
     	<!-- <script src="{{ STATIC_URL }}/js/jquery.form.js" type="text/javascript"></script> -->
@@ -38,8 +41,8 @@
 	</head>
 	<body>
     
-        <div class="topbar">
-            <div class="fill">
+        <div class="navbar">
+            <div class="navbar-inner">
                 <div class="container">
                     {% block space %}
                         <a class="brand" href="/">e-cidadania {% if debug_mode %}<span style="font-size:0.5em;color:#F00;">debug mode v{{ version }} {{ status }}</span>{% endif %}</a>
@@ -50,10 +53,10 @@
         </div>
         
         {% if messages %}
-            <div class="alert-message fade in {% if message.tags %}{{ message.tags }}{% endif %}" style="margin-top:40px;">
-                <a class="close" href="#">x</a>
+            <div class="alert {% if message.tags %}{{ message.tags }}{% endif %}" style="margin-top:40px;">
+                <a class="close" data-dismiss="alert" href="#">x</a>
                 {% for message in messages %}
-                    <p>{{ message|safe }}</p>
+                    {{ message|safe }}
                 {% endfor %}
             </div>
         {% endif %}
@@ -70,7 +73,7 @@
         <div class="container">
             <div style="margin-top:45px;">
                 <div class="row">
-                    <div class="span16">
+                    <div class="span12">
                         {% block header %}
                             <div id="logo">
 	                            {% block logo %}
@@ -101,13 +104,13 @@
         <footer style="background:#EEE;padding-bottom:10px;border-bottom:1px solid #DDD;margin-bottom:15px;border-top:1px solid #DDD;">
 	        <div class="row" style="width:960px;margin:auto;">
 	               
-	        <div class="span4">
+	        <div class="span3">
 	            {% block footerimg %}
 	                <img src="{{ STATIC_URL }}/assets/logos/logo.png" /><br />
 	            {% endblock %}
 	        </div>
 	                
-	        <div class="span4">
+	        <div class="span3">
 	            <adress>
 	                <strong>{% trans "Pages" %}</strong><br />
 	                {% block footer %}
@@ -118,21 +121,21 @@
 	            </adress>
 	        </div>
 	                
-	        <div class="span4">
+	        <div class="span3">
 	            <strong>{% trans "Help" %}</strong><br />
 	            <a href="http://trac.cidadania.coop/MailingLists">{% trans "Mailing lists" %}</a><br />
 	            <a href="http://dev.ecidadania.org">{% trans "Issues" %}</a><br />
 	            <a href="mailto:soporte@ecidadania.org">{% trans "E-mail" %}</a>
 	        </div>
 	                
-	        <div class="span4">
+	        <div class="span3">
 	            <strong>+info</strong><br />
 	        </div>
 	        </div>
 	    </footer>
 	   
 	    <div class="row" style="width:980px;margin:auto;">
-	        <div class="span16">
+	        <div class="span12">
                 {% block extrainfo %}
 	                (c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a>
 	            {% endblock %}
