--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -2,10 +2,6 @@
 {% load i18n %}
 
 {% block title %}{% trans "e-cidadania" %}{% endblock %}
-{% block extrajs %}
-    <script src="{{ STATIC_URL }}/js/bootstrap-twipsy.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}/js/bootstrap-popover.js" type="text/javascript"></script>
-{% endblock %}
 
 {% block space %}
     <a class="brand" href="/">e-cidadania {% if debug_mode %}<span style="font-size:0.5em;color:#F00;">debug mode v{{ version }} {{ status }}</span>{% endif %}</a>
@@ -14,7 +10,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="span8">
+        <div class="span6">
             <h3>{% trans "Recent processes"%}</h3><br />
             <ul class="unstyled">
                 {% for space in spaces %}
@@ -27,22 +23,22 @@
                             <span class="label important">{% trans "Private" %}</span>
                         {% endif %}
                     </li>
-                    <script>
-                        $(function () {
-                            $("a[rel=popover]")
-                                .popover({
-                                    offset: 10
-                                })
-                            })
-                    </script>
                 {% empty %}
                     <li>{% trans "There are no spaces." %}</li>
                 {% endfor %}
+                <script>
+                    $(function () {
+                        $("a[rel=popover]")
+                            .popover({
+                                offset: 10
+                            })
+                        })
+                </script>
                 <br />
                 <li>&raquo;<a href="{% url 'list-spaces' %}">{% trans "View all the spaces" %}</a></li>
             </ul>
         </div>
-        <div class="span8">
+        <div class="span6">
             <p class="introtitle">e-<strong>cidadania</strong> <span style="font-size:.5em;color:#aaa;">/e.θi.da.'da.nia/</span></p>
             <p class="intro">e-cidadania es un plataforma desarrollada para la participación ciudadana. Está hecha en software libre
                 con lo que podrás mirar el código si lo deseas y mejorarlo. Bajo ningún concepto vamos a tenerte vigilado ni vamos a
@@ -54,7 +50,7 @@
     {% if user.is_anonymous %}
        <hr />
        <div class="row">
-           <div class="span-one-third offset-one-third">
+           <div class="span4 offset4">
                <a href="{% url 'signup' %}" class="btn success large">{% trans "Register" %}</a> {% trans "or" %} <a href="{% url 'login' %}" class="btn primary large">{% trans "Login" %}</a>
            </div>
        </div>
@@ -63,7 +59,7 @@
     <hr />
  
     <div class="row">
-        <div class="span-one-third">
+        <div class="span4">
             <h3>{% trans "Recent news" %} <a href="/rss/"><img src="{{ STATIC_URL }}/assets/icons/rss16.png" alt="Feed RSS"/></a></h3>
             <ul class="unstyled">
                 {% for post in publication %}
@@ -73,11 +69,11 @@
                 {% endfor %}
             </ul>
         </div>
-        <div class="span-one-third">
+        <div class="span4">
             <h3>{% trans "True democracy" %}</h3>
             <p>El objetivo principal de e-cidadania es el de provver una plataforma real de democracia electrónica sin tapujos en la cual poder debatir los temas que nos interesan a todos.</p>
         </div>
-        <div class="span-one-third">
+        <div class="span4">
             <h3>{% trans "The most complete tool ever" %}</h3>
             <p>e-cidadania es la única herramienta que cubre los procesos participativos completos. ¿De qué sirve que hagas propuestas en una web si no se van a trasladar al modelo presencial o no se tendrán en cuenta?</p>
         </div>
@@ -86,7 +82,7 @@
     <hr />
     
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <strong>7.645</strong> procesos participativos
         </div>
     </div>
@@ -94,7 +90,7 @@
     <hr />
     
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Share" %}</h4>
             <!-- Facebook -->
             <div id="fb-root"></div>
