--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -51,7 +51,7 @@
        <hr />
        <div class="row">
            <div class="span4 offset4">
-               <a href="{% url 'signup' %}" class="btn success large">{% trans "Register" %}</a> {% trans "or" %} <a href="{% url 'login' %}" class="btn primary large">{% trans "Login" %}</a>
+               <a href="{% url 'signup' %}" class="btn btn-success btn-large">{% trans "Register" %}</a> {% trans "or" %} <a href="{% url 'login' %}" class="btn btn-primary btn-large">{% trans "Login" %}</a>
            </div>
        </div>
     {% endif %}
