--- a/src/e_cidadania/templates/comments/preview.html
+++ b/src/e_cidadania/templates/comments/preview.html
@@ -5,38 +5,37 @@
 
 {% block content %}
   
-  {% load comments %}
+    {% load comments %}
   
-  <div id="centercol">
-  
-    <form action="{% comment_form_target %}" method="post">{% csrf_token %}
-      {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
-      {% if form.errors %}
-      <h1>{% blocktrans count form.errors|length as counter %}Please correct the error below{% plural %}Please correct the errors below{% endblocktrans %}</h1><br/>
-      {% else %}
-      <h1>{% trans "Preview your comment" %}</h1><br />
-        <blockquote>{{ comment|linebreaks }}</blockquote>
-        <p>
-        {% trans "and" %} <input type="submit" name="submit" class="submit-post" value="{% trans 'Post your comment' %}" id="submit" /> {% trans "or make changes" %}:
-        </p>
-      {% endif %}
-      {% for field in form %}
-        {% if field.is_hidden %}
-          <div>{{ field }}</div>
-        {% else %}
-          {% if field.errors %}{{ field.errors }}{% endif %}
-          <p
-            {% if field.errors %} class="error"{% endif %}
-            {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-            {{ field.label_tag }} {{ field }}<br/>
-          </p>
-        {% endif %}
-      {% endfor %}
-      <p class="submit">
-      <input type="submit" name="submit" class="submit-post btn" value="{% trans "Post" %}" />
-      <input type="submit" name="preview" class="submit-preview btn" value="{% trans "Preview" %}" />
-      </p>
-    </form>
-  
-  </div>
+    <div class="row">
+        <div class="span12">
+            <form action="{% comment_form_target %}" method="post">{% csrf_token %}
+                {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
+                {% if form.errors %}
+                    <h1>{% blocktrans count form.errors|length as counter %}Please correct the error below{% plural %}Please correct the errors below{% endblocktrans %}</h1><br/>
+                {% else %}
+                    <h1>{% trans "Preview your comment" %}</h1><br />
+                    <blockquote>{{ comment|linebreaks }}</blockquote>
+                    <p>
+                        {% trans "and" %} <input type="submit" name="submit" class="submit-post" value="{% trans 'Post your comment' %}" id="submit" /> {% trans "or make changes" %}:
+                    </p>
+                {% endif %}
+                {% for field in form %}
+                    {% if field.is_hidden %}
+                        <div>{{ field }}</div>
+                    {% else %}
+                        {% if field.errors %}{{ field.errors }}{% endif %}
+                        <p {% if field.errors %} class="error"{% endif %} {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+                            {{ field.label_tag }} {{ field }}<br/>
+                        </p>
+                    {% endif %}
+                {% endfor %}
+                <p class="submit">
+                    <input type="submit" name="submit" class="submit-post btn" value="{% trans "Post" %}" />
+                    <input type="submit" name="preview" class="submit-preview btn" value="{% trans "Preview" %}" />
+                </p>
+            </form>
+        </div>
+    </div>
+ 
 {% endblock %}
