--- a/src/e_cidadania/apps/cal/templates/cal/calendar.html
+++ b/src/e_cidadania/apps/cal/templates/cal/calendar.html
@@ -5,31 +5,44 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_11">
-    
-            <div id="contenttitles">
-                {% trans "Calendar" %}
-            </div>
-
+    <div class="row">
+        <div id="span12">
+            <h3>{% trans "Calendar" %}</h3>
+            
             {{ calendar }}
-      
+            
             <hr />
             <a href="../{{ prevmonth }}/" class="btn small">{% trans 'Previous month' %}</a>
             <a href="../{{ nextmonth }}/" class="btn small">{% trans 'Next month' %}</a>
             <a href="{{ get_place.get_absolute_url }}" class="btn small">{% trans "Go back" %}</a>
         
         </div>
-    {% endblock %}
+    </div>
 
-    {% block rightcol %}
-        <div class="grid_5">
-            <div id="widget">
-                <p>Random trext</p>
-            </div>
-        </div>
-    {% endblock %}
+{% endblock %}
 
+{% block footerimg %}
+    {% for e in entities %}
+        {% if e.logo %}
+            <a href="{{ e.website }}"><img src="{{ MEDIA_URL }}/{{ e.logo }}" alt="Logo"/></a>
+            {% else %}
+                {% if e.website %}
+                    <a href="{{ e.website }}">{{ e.name }}</a> -
+                {% else %}
+                    {{ e.name }} -
+                {% endif %}
+        {% endif %}
+    {% endfor %}
+{% endblock %}
+
+{% block footer %}
+    {% for p in page %}
+        <a href="/{{ p.uri }}" title="{{ p.name }}">{{ p.name }}</a><br /> |
+    {% endfor %}
 {% endblock %}
