--- a/src/e_cidadania/apps/cal/templates/cal/error.html
+++ b/src/e_cidadania/apps/cal/templates/cal/error.html
@@ -4,10 +4,11 @@
 {% block title %}{% trans "Calendar error" %}{% endblock %}
 
 {% block content %}
-	<div id="grid_16">
-		{% trans "You entered and incorrect month or year. Please correct it." %}<br/><br/><br/>
-		<div>
-		    {% trans "You can go" %} <a href="{{ get_place.get_absolute_url }}"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="{% url 'profile_overview' %}"><u>{% trans "back to your profile" %}</u></a>
-	  </div>
+	<div class="row">
+	    <div class="span12">
+	        <h3>{% trans "Calendar error" %}</h3>
+		    <p>{% trans "You entered and incorrect month or year. Please correct it." %}</p>
+		    <p>{% trans "You can go" %} <a href="{{ get_place.get_absolute_url }}"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="{% url 'profile_overview' %}"><u>{% trans "back to your profile" %}</u></a></p>
+	    </div>
 	</div>
 {% endblock %}
