--- a/src/e_cidadania/apps/debate/templates/debate/debate_list.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_list.html
@@ -5,13 +5,10 @@
 
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
-    
-            <div id="contenttitles">
-                <h3>{% trans "Debates in" %} {{ get_place.name }}</h3>
-            </div>
-      
+    <div class="row">
+        <div class="span12">
+            <h3>{% trans "Debates in" %} {{ get_place.name }}</h3>
+            
             {% for debate in object_list %}
                 <div id="spaceitem">
                     <h6 class="spacetitle"><a href="{{ debate.get_absolute_url }}">{{ debate.title }}</a></h6>
@@ -23,9 +20,8 @@
             
             <hr />
             <a href="{% url 'space-index' get_place.url %}" class="btn small">&laquo; {% trans "Go back" %}</a>
-        </div>
-    
-        {% if is_paginated %}
+            
+            {% if is_paginated %}
             <div class="pagination">
                 <span class="page-links">
                     {% if page_obj.has_previous %}
@@ -39,8 +35,9 @@
                     {% endif %}
                 </span>
             </div>
-        {% endif %}
-    {% endblock %}
+            {% endif %}   
+        </div>
+    </div>
 
 {% endblock %}
 
