--- a/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
@@ -28,14 +28,14 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Delete post" %}</h4>
             <form action="" method="post">{% csrf_token %}
                 <p>{% trans "Are you sure you want to delete this post? This action cannot be undone." %}</p>
 
                 <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
-                <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn btn-small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn btn-small btn-danger" type="submit" value="{% trans 'Delete' %}" />
             </form>
         </div>
     </div>
