--- a/src/e_cidadania/apps/news/templates/news/post_edit.html
+++ b/src/e_cidadania/apps/news/templates/news/post_edit.html
@@ -24,12 +24,12 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Edit post" %}</h4>
         </div>
     </div>
     <div class="row">
-        <div class="span11">
+        <div class="span8">
             <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
 
                 {% if form.non_field_errors %}
@@ -136,12 +136,12 @@
                 </div>
  
             <hr />
-            <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
-            <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
+            <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
+            <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Publish' %}" />
             
             </form>
         </div>
-        <div class="span5">
+        <div class="span4">
             <h4>Empty space!</h4>
         </div>
     </div>
