--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_add.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_add.html
@@ -22,12 +22,12 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Add new proposal" %}</h4>
         </div>
     </div>
     <div class="row">
-        <div class="span11">
+        <div class="span8">
             <form action="" method="post">{% csrf_token %}
 
                 {% if form.non_field_errors %}
@@ -121,11 +121,11 @@
                 </div>
 
                 <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
-                <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Publish' %}" />
             </form>
         </div>
-        <div class="span5">
+        <div class="span4">
             {% if user.is_staff %}
                 <h4>{% trans "Admins/moderators read this" %}</h4>
                 <p class="instructions">{% trans "There are a lot more options in the proposals but they will appear only when you edit the proposal."%}</p>
