--- a/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
@@ -5,15 +5,16 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_11">
-    
-            <div id="contenttitles">
-                {% trans "Upload new document" %}
-            </div>
-      
+    <div class="row">
+        <div class="span8">
+            <h3>{% trans "Upload new document" %}</h3>
+            
             <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
       
                 {% if form.non_field_errors %}
@@ -58,26 +59,19 @@
                 {{ form.author.as_hidden }}
                 
                 <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
-                <input class="btn small primary" type="submit" value="{% trans 'Upload' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Upload' %}" />
 
             </form>
         </div>
-
-    {% endblock %}
-
-
-    {% block rightcol %}
-        <div class="grid_5">
-            <div id="widget">
-                <h2>{% trans "What can I upload?"%}</h2>
-                <ul class="instructions">
-                    <li><strong>{% trans "Allowed formats" %}:</strong> {% trans "PDF, ODT, DOC, TXT, RTF, etc. Audio and video are not allowed."%}</li>
-                    <li><strong>{% trans "Maximum size" %}:</strong> {% trans "Allowed size is 25MB"%}</li>
-                </ul>
-            </div>
+        <div class="span4">
+            <h4>{% trans "What can I upload?"%}</h2>
+            <ul class="instructions">
+                <li><strong>{% trans "Allowed formats" %}:</strong> {% trans "PDF, ODT, DOC, TXT, RTF, etc. Audio and video are not allowed."%}</li>
+                <li><strong>{% trans "Maximum size" %}:</strong> {% trans "Allowed size is 25MB"%}</li>
+            </ul>
         </div>
-    {% endblock %}
+    </div>
 
 {% endblock %}
 
