--- a/src/e_cidadania/apps/spaces/templates/spaces/document_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_confirm_delete.html
@@ -5,29 +5,25 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
-    
-            <div id="contenttitles">
-                {% trans "Delete document" %}
-            </div>
-      
+    <div class="row">
+        <div class="span12">
+            <h3>{% trans "Delete document" %}</h3>
+            
             <form action="" method="post">{% csrf_token %}
                 <p>{% trans "Are you sure you want to delete this document? This action cannot be undone" %}.</p><br/>
 
                 <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
-                <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn btn-small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn btn-small btn-danger" type="submit" value="{% trans 'Delete' %}" />
 
             </form>
         </div>
-
-    {% endblock %}
-
-
-    {% block rightcol %}
-    {% endblock %}
+    </div>
 
 {% endblock %}
