--- a/src/e_cidadania/apps/spaces/templates/spaces/event_detail.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/event_detail.html
@@ -5,14 +5,15 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_11">
-    
-            <div id="contenttitles">
-                {% trans "View event" %}
-            </div>
+    <div class="row">
+        <div class="span8">
+            <h3>{% trans "View event" %}</h3>
             
             {% if perms.spaces.edit_event %}
                 <div id="tools">
@@ -22,7 +23,7 @@
                     {% endif %}
                 </div>
             {% endif %}
-      
+
             <h1>{{ event.title }}</h1><br />
             <p>{{ event.location }}, {{ event.event_date }} - {{ event.event_type}}</p><br /><br />
 
@@ -39,13 +40,11 @@
                     </a>
                 {% endfor %}
             </p>
-
         </div>
-    {% endblock%}
-  
-    {% block rightcol %}
-        <div class="grid_5">
+        
+        <div class="span4">
+            <p>This is empty!</p>
         </div>
-    {% endblock%}
+    </div>
 
 {% endblock %}
