--- a/src/e_cidadania/apps/spaces/templates/spaces/event_edit.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/event_edit.html
@@ -6,15 +6,16 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_11">
-  
-            <div id="contenttitles">
-                {% trans "Edit event" %}
-            </div>
-      
+    <div class="row">
+        <div class="span8">
+            <h3>{% trans "Edit event" %}</h3>
+            
             <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
             
                 {% if form.non_field_errors %}
@@ -124,9 +125,13 @@
                 {{ form.event_author.as_hidden }}
         
                 <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Cancel" %}</a>
-                <input class="btn small primary " type="submit" value="{% trans 'Save' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Cancel" %}</a>
+                <input class="btn btn-small btn-primary " type="submit" value="{% trans 'Save' %}" />
             </form>
         </div>
-    {% endblock %}
+        <div class="span4">
+            <p>This is empty!</p>
+        </div>
+    </div>
+
 {% endblock %}
