Updated spaces templates to bootstrap 2.0

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -7,13 +7,13 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Create a new space" %}</h4>
         </div>
     </div>
     
     <div class="row">
-        <div class="span11">
+        <div class="span8">
             <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
                 
                 {% if form.non_field_errors %}
@@ -213,12 +213,12 @@
                 {% endfor %}
            
                 <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Cancel" %}</a>
-                <input class="btn small primary " type="submit" value="{% trans 'Create' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Cancel" %}</a>
+                <input class="btn btn-small btn-primary " type="submit" value="{% trans 'Create' %}" />
     
             </form>
         </div>
-        <div class="span5">
+        <div class="span4">
             <h4>{% trans "How to add new spaces" %}</h4><br/>
             <ul class="instructions">
                 <li><strong>{% trans "Space name" %}</strong>: {% trans "The name of the space. Have in mind that this name will be used as the URL of your space. We recommend to use all lowercase. (100 chars)" %}</li>
