--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -6,10 +6,6 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
-{% block extrajs %}
-    <script src="{{ STATIC_URL }}/js/bootstrap-tabs.js" type="text/javascript"></script>
-{% endblock %}
-
 {% block space %}
     <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
 {% endblock %}
@@ -17,26 +13,26 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
-            <ul class="tabs" data-tabs="tabs" >
-                <li class="active"><a href="#overview">{% trans "Overview" %}</a></li>
+        <div class="span12">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#overview" data-toggle="tab">{% trans "Overview" %}</a></li>
                 {% if get_place.mod_news %}
-                <li><a href="#news">{% trans "News" %}</a></li>
+                <li><a href="#news" data-toggle="tab">{% trans "News" %}</a></li>
                 {% endif %}
                 {% if get_place.mod_debate %}
-                <li><a href="#debates">{% trans "Debates" %}</a></li>
+                <li><a href="#debates" data-toggle="tab">{% trans "Debates" %}</a></li>
                 {% endif %}
                 {% if get_place.mod_proposals %}
-                <li><a href="#proposals">{% trans "Proposals" %}</a></li>
+                <li><a href="#proposals" data-toggle="tab">{% trans "Proposals" %}</a></li>
                 {% endif %}
                 {% if get_place.mod_docs %}
-                <li><a href="#docs">{% trans "Documents" %}</a></li>
+                <li><a href="#docs" data-toggle="tab">{% trans "Documents" %}</a></li>
                 {% endif %}
                 {% if get_place.mod_cal %}
-                <li><a href="#events">{% trans "Events" %}</a></li>
+                <li><a href="#events" data-toggle="tab">{% trans "Events" %}</a></li>
                 {% endif %}
-                <li class="dropdown" data-dropdown="dropdown">
-                    <a href="#" class="dropdown-toggle">{% trans "Administration" %}</a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Administration" %} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         {% if perms.news.add_post %}
                             <li><a href="{% url 'add-post' get_place.url %}">
@@ -59,7 +55,7 @@
             <div id="my-tab-content" class="tab-content">
                 <div class="tab-pane active" id="overview">
                     <div class="row">
-                        <div class="span11 space-content">
+                        <div class="span8">
                             {% if get_place.description %}
                                 <p><strong>{% trans "Description:" %}</strong> {{ get_place.description|removetags:'p'|safe }}</p>
                             {% endif %}
@@ -112,7 +108,7 @@
                                 </ul>
                             {% endif %}
                         </div>
-                        <div class="span5 space-sidebar">
+                        <div class="span4 space-sidebar">
                             <h4>{% trans "Next events" %}</h4>
                             <ul class="unstyled">
                                 {% for m in event %}
@@ -127,7 +123,7 @@
                 {% if get_place.mod_news %}
                 <div class="tab-pane" id="news">
                     <div class="row">
-                        <div class="span11 space-content">
+                        <div class="span8">
                             {% for news in publication %}
                                 <h2 class="posttitle"><a href="{{ news.get_absolute_url }}">{{ news.post_title }}</a>
                                     {% if perms.news.edit_post %}
@@ -151,7 +147,7 @@
                                 </ul>
                             {% endfor %}
                         </div>
-                        <div class="span5 space-sidebar">
+                        <div class="span4 space-sidebar">
                             {% if perms.news.add_post %}
                                 <h4>{% trans "Administration" %}</h4>
                                 <ul class="unstyled">
@@ -174,7 +170,7 @@
                 {% if get_place.mod_debate %}
                 <div class="tab-pane" id="debates">
                     <div class="row">
-                        <div class="span11">
+                        <div class="span8">
                             <h4>{% trans "Active debates" %}</h4>
                             <ul class="unstyled">
                                 {% for debate in debates %}
@@ -196,7 +192,7 @@
                                 {% endfor %}
                             </ul>
                         </div>
-                        <div class="span5">
+                        <div class="span4">
                             <h4>{% trans "Administration" %}</h4>
                             <ul class="unstyled">
                                 {% if perms.debate.add_debate %}
@@ -230,7 +226,7 @@
                 {% if get_place.mod_proposals %}
                 <div class="tab-pane" id="proposals">
                     <div class="row">
-                        <div class="span11">
+                        <div class="span8">
                             <h4>{% trans "New proposals" %}</h4>
                             <ul class="unstyled">
                                 {% for proposal in proposals %}
@@ -243,7 +239,7 @@
                             <h4>{% trans "Most commented" %}</h4>
                             <h4>{% trans "Highlighted proposals" %}</h4>
                         </div>
-                        <div class="span5">
+                        <div class="span4">
                             <h4>{% trans "Administration" %}</h4>
                             <ul class="unstyled">
                                 {% if perms.proposals.add_proposal %}
@@ -265,7 +261,7 @@
                 {% if get_place.mod_docs %}
                 <div class="tab-pane" id="docs">
                     <div class="row">
-                        <div class="span11">
+                        <div class="span8">
                             <ul class="unstyled">
                                 {% for doc in documents %}
                                     <li><a href="{{ MEDIA_URL }}{{ doc.docfile.url }}">{{ doc.title }} ({{ doc.get_file_ext }}, {{ doc.get_file_size }})</a></li>
@@ -274,7 +270,7 @@
                                 {% endfor %}
                             </ul>
                         </div>
-                        <div class="span5">
+                        <div class="span4">
                             <h4>{% trans "Administration" %}</h4>
                             <ul class="unstyled">
                                 {% if perms.spaces.add_document %}
@@ -308,7 +304,7 @@
                 
                 <div class="tab-pane" id="events">
                     <div class="row">
-                        <div class="span11">
+                        <div class="span8">
                             <script type="text/javascript" src="{{ STATIC_URL }}/js/jqueryui-datepicker-{{ LANGUAGE_CODE }}.js"></script>
                             <script type="text/javascript">
                                 {% comment %}
@@ -348,7 +344,7 @@
                             </script>
                             <div id="datepicker"></div>
                         </div>
-                        <div class="span5">
+                        <div class="span4">
                             <h4>{% trans "Administration" %}</h4>
                             <ul class="unstyled">
                                 {% if perms.spaces.add_event %}
@@ -370,7 +366,7 @@
 
     {% comment %}
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Share" %}</h4>
                 <!-- Facebook -->
                 <div id="fb-root"></div>
