--- a/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
@@ -5,13 +5,10 @@
 
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
-    
-            <div id="contenttitles">
-                {% trans "Spaces list" %}
-            </div>
-      
+    <div class="row">
+        <div class="span12">
+            <h3>{% trans "Spaces list" %}</h3>
+            
             {% for space in object_list %}
                 <div id="spaceitem">
                     <p class="spacetitle"><a href="{{ space.get_absolute_url }}">{{ space.name }}</a></p>
@@ -22,10 +19,7 @@
             {% endfor %}
             
             <hr />
-            <a href="{% url 'site-index' %}" class="btn small">&laquo; {% trans "Go back" %}</a>
-        </div>
-    
-        {% if is_paginated %}
+            {% if is_paginated %}
             <div class="pagination">
                 <span class="page-links">
                     {% if page_obj.has_previous %}
@@ -39,8 +33,10 @@
                     {% endif %}
                 </span>
             </div>
-        {% endif %}
-    {% endblock %}
+            {% endif %} 
+            <a href="{% url 'site-index' %}" class="btn btn-small">&laquo; {% trans "Go back" %}</a>
+        </div>
+    </div>
 
 {% endblock %}
 
